<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/fragment_background"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="34sp"
            android:layout_marginBottom="50dp"
            tools:ignore="TextSizeCheck"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cipher_2_0"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_s_new"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/can_edit_ciph_after_add"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/can_edit_meet_after_add"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/notification_and_reminder_alarm"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_tips"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_can_on_off_alarm_sound_and_tips"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_group"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_picture"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/low_data_use"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run_in_background"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/previse_ciph_and_meet_load_to_new_member"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_help_video"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_can_give_feedback_with_image"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_section"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_between_servers_anytime"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/nick_name_and_profile_picture_change_via_server"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#A0C030"
            android:text="@string/happy_learn_happy_work"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="22sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>