<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#CA000000"
        android:padding="16dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_ciph"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/addMeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_meeting"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/addGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_group"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/leaveGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/leave_group"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/createGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/create_group"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/changeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/setting"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/how_to_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/how_to_use"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/feedback"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/about"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>
