<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".Feedback">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_feedback"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/feedback_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Type here"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:scrollbars="vertical"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/feedback_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user_img" />

            <Button
                android:layout_width="197dp"
                android:layout_height="56dp"
                android:background="@drawable/button_style"
                android:onClick="GetImage"
                android:layout_gravity="center"
                android:text="@string/choose_image"
                android:textColor="#212121"
                android:layout_marginTop="10dp"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="197dp"
                android:layout_height="56dp"
                android:background="@drawable/button_style"
                android:onClick="Submit"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textColor="#212121"
                android:layout_marginTop="10dp"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>