<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/register_background"
    android:orientation="vertical"
    tools:context=".Sever">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sever"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        tools:ignore="DisableBaselineAlignment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sever"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/no_sever"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.289"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/string_server_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_sever_name_here"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/string_server_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_sever_password_here"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:background="@drawable/button_style"
        android:onClick="Join"
        android:text="@string/join"
        android:textColor="#212121"
        android:layout_gravity="center"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:background="@drawable/button_style"
        android:layout_marginTop="50dp"
        android:onClick="create"
        android:text="@string/create_sever"
        android:textColor="#212121"
        android:layout_gravity="center"
        tools:ignore="UsingOnClickInXml" />

</androidx.appcompat.widget.LinearLayoutCompat>