<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/one_task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BB000000"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/click_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/task_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</LinearLayout>